# will-hazlewood

./: .env.example  .gitignore  README.md  RULES.md  RULES_AUDIT.md  docker-compose.yml  plan.md  pyproject.toml  roadmap.md
.claude/: settings.json
broker_scout/: scrapy.cfg
broker_scout/broker_scout/: extensions.py  items.py  schemas.py  settings.py
broker_scout/broker_scout/common/: brokers_repo.py  db.py  dld_client.py  dld_models.py  dld_repo.py  matching.py  normalizers.py  run_context.py  sheets_repo.py
broker_scout/broker_scout/monitors/: actions.py  coverage_tiers.py  monitors.py  notifiers.py
broker_scout/broker_scout/pipelines/: __init__.py  gdrive_csv.py  gsheets.py  postgres.py  validation.py
broker_scout/broker_scout/spiders/: _pf_extractors.py  agent_spider.py  (+1 more)
docs/: architecture.md  data-flow.md  database.md  index.md  monitors.md  operators.md  workflow.md
docs/pdf/: .md-to-pdf.config.js
propertyFinder/: scrapy.cfg
propertyFinder/propertyFinder/: middlewares.py  settings.py
sql/migrations/: 001_dld_brokers.sql  002_brokers.sql  003_sheet_registry.sql  004_match_columns.sql
tests/: conftest.py  test_base_spider.py  test_brokers_repo.py  test_chat_actions.py  test_close_monitors.py  test_dld_repo.py  test_gauth.py  test_gdrive_csv_pipeline.py  test_gsheets_pipeline.py  test_logging_setup.py  test_matching.py  test_monitors_smoke.py  test_notifiers.py  test_periodic_monitors.py  test_pf_extractors.py  test_postgres_pipeline.py  test_schemas.py  test_sheets_repo.py  test_smoke.py  test_validation_monitors.py  test_validation_pipeline.py
(+7 files in other folders)
